alignment fix for ItemSearchBar

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@
     1px 1px 0 #FF;
 } */
 
+#item_search_bar {
+  position: relative;
+  left: 900px;
+  top: 0px;
+}
+
+#item_search_field {
+  border-radius: 25px;
+  border: 2px solid black;
+  padding: 20px;
+  width: 200px;
+  height: 15px;
+}
+
 .nav-btn {
   margin-left: 10px;
 }
